<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.MainActivity">

    <br.com.vagners.sendmoney.util.VideoSurfaceView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryAlpha">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="140sp"
                android:layout_height="140sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_profile_picture"
                android:padding="5dp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="USER NAME"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_default" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="SEU@EMAIL.COM"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_small" />

            <TextView
                android:id="@+id/load_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/message_token"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_default"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/btn_send"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_button"
                android:visibility="gone">

                <TextView
                    android:id="@+id/lbl_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="ENVIAR DINHEIRO"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size_default"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_extract"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_button"
                android:visibility="gone">

                <TextView
                    android:id="@+id/lbl_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="HISTÓRICO DE COMPRAS"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size_default"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>


</FrameLayout>
